[gd_scene load_steps=3 format=3 uid="uid://wivet2lx3hko"]

[ext_resource type="Script" path="res://Scripts/arrow_thrower.gd" id="1_kimhl"]
[ext_resource type="Texture2D" uid="uid://dxiylxndb54oh" path="res://Assets/Sprites/Traps/Dispensador.png" id="1_tmry0"]

[node name="ArrowThrower" type="Sprite2D"]
z_index = 1
texture = ExtResource("1_tmry0")
script = ExtResource("1_kimhl")

[node name="LifeArrowTimer" type="Timer" parent="."]

[node name="Cooldown" type="Timer" parent="."]
wait_time = 5.0

[node name="ShootingPoint" type="Node2D" parent="."]
position = Vector2(9, 7)
scale = Vector2(1, 1)

[connection signal="timeout" from="LifeArrowTimer" to="." method="_on_life_arrow_timer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
